--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
-}
+} */
 
 /* @theme inline {
   --color-background: var(--background);
@@ -20,7 +20,8 @@
 } */
 
 body {
-  background: var(--background);
+  box-sizing: border-box;
+  /* background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif; */
 }
